--- a/CurrencyChecker/CurrencyChecker.csproj
+++ b/CurrencyChecker/CurrencyChecker.csproj
@@ -96,7 +96,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\AgeConverter.cs" />
+    <Compile Include="Models\Currency.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="ViewModels\CurrencyCheckViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="Views\About.xaml.cs">
@@ -107,9 +109,6 @@
     </Compile>
     <Compile Include="Views\CurrencyCheck.xaml.cs">
       <DependentUpon>CurrencyCheck.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\FirstPage.xaml.cs">
-      <DependentUpon>FirstPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -151,10 +150,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\CurrencyCheck.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\FirstPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
