fetching api data and binding it into view

--- a/CurrencyChecker/CurrencyChecker.csproj
+++ b/CurrencyChecker/CurrencyChecker.csproj
@@ -95,11 +95,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Converters\AgeConverter.cs" />
+    <Compile Include="Converters\ValueConverter.cs" />
     <Compile Include="Models\Currency.cs" />
-    <Compile Include="Models\Person.cs" />
     <Compile Include="ViewModels\CurrencyCheckViewModel.cs" />
-    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="Views\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
@@ -109,9 +107,6 @@
     </Compile>
     <Compile Include="Views\CurrencyCheck.xaml.cs">
       <DependentUpon>CurrencyCheck.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\BaseCurrency.cs" />
     <Compile Include="Models\Rates.cs" />
@@ -153,18 +148,20 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Views\Menu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Http">
+      <Version>2.2.29</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.2.3</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>10.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
